--- a/src/app/components/project/copy/video/Video.css
+++ b/src/app/components/project/copy/video/Video.css
@@ -20,43 +20,43 @@
       position: relative;
       top: 0;
       left: 0;
-      padding-top: 56.25%; }
+      padding-top: 56.25%;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
       @media (max-width: 769px) {
         .mobile-details-copy > .video .content .project {
           padding-top: 75%; } }
-      .mobile-details-copy > .video .content .project .container, .mobile-details-copy > .video .content .project .wrapper {
+      .mobile-details-copy > .video .content .project .wrapper {
         height: 100%;
-        width: 100%;
+        width: 80vw;
         position: absolute;
         top: 0;
-        padding: 0;
-        margin: 0; }
-      .mobile-details-copy > .video .content .project .wrapper > div {
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        max-width: 90vw;
         left: 50%;
         transform: translateX(-50%);
-        top: 0; }
-        .mobile-details-copy > .video .content .project .wrapper > div video {
-          min-height: 100%;
-          max-height: 100%;
-          background: black;
-          border: 1px solid #000222;
-          box-shadow: 0 0 50px rgba(0, 2, 34, 0.35);
-          max-width: 90vw;
-          width: auto !important;
-          height: auto !important; }
-          @media (max-width: 769px) {
-            .mobile-details-copy > .video .content .project .wrapper > div video {
-              background: transparent;
-              border: none;
-              box-shadow: none;
-              min-height: auto; } }
+        padding: 0;
+        margin: 0; }
+        @media (max-width: 769px) {
+          .mobile-details-copy > .video .content .project .wrapper {
+            width: 90vw; } }
+        .mobile-details-copy > .video .content .project .wrapper > div {
+          height: 100%;
+          width: 100%;
+          position: absolute;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          left: 0;
+          top: 0; }
+          .mobile-details-copy > .video .content .project .wrapper > div video {
+            min-height: 100%;
+            max-height: 100%;
+            background: black;
+            border: 1px solid #000222;
+            box-shadow: 0 0 50px rgba(0, 2, 34, 0.35);
+            max-width: 90vw;
+            width: auto !important;
+            height: auto !important; }
   .mobile-details-copy > .video .bottom {
     height: 20vh;
     position: relative;
