--- a/src/app/components/project/copy/video/Video.scss
+++ b/src/app/components/project/copy/video/Video.scss
@@ -40,78 +40,61 @@
 				top: 0;
 				left: 0;
 				padding-top: 9/16*100%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				//padding-top: 65%;
 
 				@include sm(){
 					padding-top: 75%;
 				}
 
-
-				.container, .wrapper{
+				.wrapper{
 					height: 100%;
-					width: 100%;
+					width: 80vw;
 					position: absolute;
 					top: 0;
-					padding: 0;
-					margin: 0;
-				}
-
-				.wrapper > div{
-					height: 100%;
-					// padding-top: 9/16 * 100%;
-					width: 100%;
-					position: absolute;
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					//min-height: 400px;
-					max-width: 90vw;
 					left: 50%;
 					transform: translateX(-50%);
-					top: 0;
+					padding: 0;
+					margin: 0;
 
-					// @include sm(){
-					// 	height: 100%;
-					// 	background: yellow;
-					// }
-
-					video{
-						// position: absolute;
-						// top:0;
-						min-height: 100%;
-						max-height: 100%;
-						background: black;
-						border:1px solid $black;
-						box-shadow: 0 0 50px rgba($black,.35);
-						max-width: 90vw;
-
-						width: auto !important;
-						height: auto !important;
-
-						@include sm(){
-							background: transparent;
-							border:none;
-							box-shadow: none;
-							min-height: auto;
-						}
+					@include sm(){
+						width: 90vw;
 					}
 
+					&>div{
+						height: 100%;
+						width: 100%;
+						position: absolute;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						left: 0;
+						top: 0;
 
-					// .video-react{
-					// 	position: absolute;
-					// 	top: 0;
-					// 	height: 100%;
-					// 	width: 100%;
-					// 	overflow: hidden;
-					// 	// padding-top: 0 !important;
-					//
-					// 	video{
-					// 		border:1px solid $black;
-					// 		box-shadow: 0 0 50px rgba($black,.35);
-					// 		background: yellow;
-					// 		//height: 100%;
-					// 	}
-					// }
+
+						video{
+							// position: absolute;
+							// top:0;
+							min-height: 100%;
+							max-height: 100%;
+							background: black;
+							border:1px solid $black;
+							box-shadow: 0 0 50px rgba($black,.35);
+							max-width: 90vw;
+
+							width: auto !important;
+							height: auto !important;
+
+							@include sm(){
+								// background: transparent;
+								// border:none;
+								// box-shadow: none;
+								// min-height: auto;
+							}
+						}
+					}
 				}
 			}
 		}
